@@ -537,13 +537,9 @@ main (int argc, char **argv)
       exit (EXIT_FAILURE);
     }
 
-#ifndef __arm__
-#ifndef __aarch64__
   dmidecode_probe_display (ctx);
   smbios_probe_display (ctx);
   acpi_probe_display (ctx);
-#endif
-#endif
   pci_probe_display (ctx);
   if (cmd_args.defaults)
     defaults_display (ctx);
